WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287691
2.46.6: build failure when configured with "-DUSE_GSTREAMER_GL=OFF" (both webkitgtk and wpewebkit)
https://bugs.webkit.org/show_bug.cgi?id=287691
Summary
2.46.6: build failure when configured with "-DUSE_GSTREAMER_GL=OFF" (both web...
Thomas Zajic
Reported
2025-02-14 01:00:07 PST
Created
attachment 474231
[details]
Patch to fix compilation with "-DUSE_GSTREAMER_GL=OFF" Some parts of the newly added code in 2.46.6 result in a build failure when wekbitgtk is configured with "-DUSE_GSTREAMER_GL=OFF". This problem occurs when building webkitgtk with API 4.0, 4.1 and 6.0, as well as when building wpewebkit.
> /usr/local/stow/cmake-3.31.5/bin/cmake -P /usr/local/src/webkitgtk-2.46.6/0build/CMakeFiles/VerifyGlobs.cmake > /usr/local/stow/cmake-3.31.5/bin/cmake -S/usr/local/src/webkitgtk-2.46.6 -B/usr/local/src/webkitgtk-2.46.6/0build --check-build-system CMakeFiles/Makefile.cmake 0 > /usr/local/stow/cmake-3.31.5/bin/cmake -E cmake_progress_start /usr/local/src/webkitgtk-2.46.6/0build/CMakeFiles /usr/local/src/webkitgtk-2.46.6/0build//CMakeFiles/progress.marks > make -f CMakeFiles/Makefile2 all > make[1]: Entering directory '/usr/local/src/webkitgtk-2.46.6/0build' > make -f Source/bmalloc/CMakeFiles/bmalloc.dir/build.make Source/bmalloc/CMakeFiles/bmalloc.dir/depend > make -f Source/bmalloc/CMakeFiles/bmalloc_CopyHeaders.dir/build.make Source/bmalloc/CMakeFiles/bmalloc_CopyHeaders.dir/depend > make -f Source/WTF/wtf/CMakeFiles/WTF_CopyHeaders.dir/build.make Source/WTF/wtf/CMakeFiles/WTF_CopyHeaders.dir/depend > make -f Source/WTF/wtf/CMakeFiles/WTF_CopyPreferences.dir/build.make Source/WTF/wtf/CMakeFiles/WTF_CopyPreferences.dir/depend > make[2]: Entering directory '/usr/local/src/webkitgtk-2.46.6/0build' > [...] > cd /usr/local/src/webkitgtk-2.46.6/0build/Source/WebCore && /usr/bin/ccache /usr/bin/c++ -DBUILDING_GTK__=1 -DBUILDING_WEBKIT=1 -DBUILDING_WITH_CMAKE=1 -DBUILDING_WebCore -DGETTEXT_PACKAGE=\"WebKitGTK-4.0\" -DHAVE_CONFIG_H=1 -DJSC_GLIB_API_ENABLED -DPAS_BMALLOC=1 -DSK_ASSUME_GL=0 -DSK_ASSUME_GL_ES=1 -DSK_ASSUME_WEBGL=0 -DSK_DISABLE_LEGACY_GL_MAKE_NATIVE_INTERFACE -DSK_DISABLE_LEGACY_IMAGE_READBUFFER -DSK_DISABLE_LEGACY_INIT_DECODERS -DSK_DISABLE_LEGACY_PNG_WRITEBUFFER -DSK_DISABLE_TRACING -DSK_DISABLE_WEBGL_INTERFACE -DSK_ENABLE_PRECOMPILE -DSK_R32_SHIFT=16 -DSK_RELEASE -DSTATICALLY_LINKED_WITH_PAL -DUSE_SYSTEM_EGL -I/usr/local/src/webkitgtk-2.46.6/0build -I/usr/local/src/webkitgtk-2.46.6/0build/WebCore/DerivedSources -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/ShapeDetection -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/ShapeDetection/Interfaces -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/WebGPU -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/WebGPU/InternalAPI -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/WebGPU/Implementation -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/airplay -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/applepay -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/applepay/paymentrequest -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/applicationmanifest -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/async-clipboard -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/audiosession -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/badge -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/beacon -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/cache -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/compression -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/contact-picker -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/cookie-consent -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/cookie-store -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/credentialmanagement -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/encryptedmedia -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/encryptedmedia/legacy -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/entriesapi -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/fetch -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/filesystemaccess -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/geolocation -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/highlight -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/identity -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/indexeddb -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/indexeddb/client -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/indexeddb/server -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/indexeddb/shared -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/mediacapabilities -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/mediacontrols -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/mediarecorder -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/mediasession -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/mediasource -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/mediastream -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/model-element -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/model-element/dummy -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/navigatorcontentutils -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/notifications -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/paymentrequest -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/permissions -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/pictureinpicture -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/plugins -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/push-api -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/remoteplayback -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/reporting -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/screen-wake-lock -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/speech -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/storage -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/streams -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/web-locks -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webaudio -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webauthn -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webauthn/cbor -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webauthn/fido -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webcodecs -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webdatabase -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webdriver -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/websockets -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webtransport -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/webxr -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/accessibility -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/accessibility/isolatedtree -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/animation -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/bindings -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/bindings/js -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/bridge -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/bridge/c -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/bridge/jsc -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/contentextensions -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/crypto -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/crypto/algorithms -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/crypto/keys -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/crypto/parameters -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css/calc -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css/color -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css/parser -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css/query -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css/typedom -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css/typedom/color -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css/typedom/numeric -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/css/typedom/transform -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/cssjit -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/dom -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/dom/messageports -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/domjit -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/editing -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/fileapi -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/history -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/html -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/html/canvas -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/html/forms -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/html/parser -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/html/shadow -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/html/track -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/inspector -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/inspector/agents -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/inspector/agents/page -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/inspector/agents/worker -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/block -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/block/tablewrapper -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/flex -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/floats -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/inline -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/inline/display -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/inline/invalidation -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/inline/ruby -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/inline/text -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/integration -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/integration/flex -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/integration/inline -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/layouttree -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/layout/formattingContexts/table -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/loader -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/loader/appcache -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/loader/archive -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/loader/archive/mhtml -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/loader/cache -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/loader/icon -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/mathml -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/page -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/page/csp -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/page/scrolling -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/page/text-extraction -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/animation -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/audio -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/calc -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/encryptedmedia -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/gamepad -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/cpu/arm -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/cpu/arm/filters -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/displaylists -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/filters -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/filters/software -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/controls -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/iso -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/opentype -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/transforms -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/mediacapabilities -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/mediarecorder -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/mediastream -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/mock -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/mock/mediasource -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/network -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/sql -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/text -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/xr -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/plugins -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/rendering -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/rendering/line -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/rendering/mathml -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/rendering/shapes -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/rendering/style -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/rendering/svg -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/rendering/svg/legacy -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/rendering/updating -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/replay -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/storage -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/style -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/svg -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/svg/animation -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/svg/graphics -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/svg/graphics/filters -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/svg/properties -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/websockets -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/workers -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/workers/service -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/workers/service/background-fetch -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/workers/service/context -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/workers/service/server -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/workers/shared -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/workers/shared/context -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/worklets -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/xml -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/xml/parser -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/gamepad -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/angle -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/lcms -I/usr/local/src/webkitgtk-2.46.6/Source/ThirdParty/xdgmime/src -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/adwaita -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/Modules/mediastream/gstreamer -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/gstreamer -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/gstreamer/mse -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/gstreamer/eme -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/gstreamer -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/mediarecorder/gstreamer -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/audio/gstreamer -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders/avif -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders/bmp -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders/gif -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders/ico -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders/jpeg -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders/jpegxl -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders/png -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/image-decoders/webp -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/network/soup -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/texmap -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/texmap/coordinated -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/page/scrolling/nicosia -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/nicosia -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/nicosia/texmap -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/harfbuzz -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/filters/skia -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/skia -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/accessibility/atspi -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/crypto/openssl -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/page/gtk -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/audio/glib -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/generic -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/glib -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/gtk -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/egl -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/epoxy -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/gbm -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/gtk -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/opengl -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/wayland -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/x11 -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/mediastream/gtk -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/mediastream/gstreamer -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/network/glib -I/usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/text/gtk -I/usr/local/src/webkitgtk-2.46.6/0build/ANGLE/Headers -I/usr/local/src/webkitgtk-2.46.6/Source/ThirdParty/skia -I/usr/local/src/webkitgtk-2.46.6/0build/Skia/Headers -I/usr/local/src/webkitgtk-2.46.6/0build/JavaScriptCore/Headers -I/usr/local/src/webkitgtk-2.46.6/0build/JavaScriptCore/PrivateHeaders -I/usr/local/src/webkitgtk-2.46.6/0build/JavaScriptCoreGLib/Headers -I/usr/local/src/webkitgtk-2.46.6/0build/JavaScriptCoreGLib/DerivedSources -I/usr/local/src/webkitgtk-2.46.6/0build/WTF/Headers -I/usr/local/src/webkitgtk-2.46.6/0build/bmalloc/Headers -I/usr/local/src/webkitgtk-2.46.6/0build/PAL/Headers -isystem /usr/local/include/gstreamer-1.0 -isystem /usr/local/include/glib-2.0 -isystem /usr/local/lib64/glib-2.0/include -isystem /usr/local/include/sysprof-6 -isystem /usr/include/libdrm -isystem /usr/local/include/orc-0.4 -isystem /usr/local/include/libsoup-2.4 -isystem /usr/local/include/enchant-2 -isystem /usr/local/include/gio-unix-2.0 -isystem /usr/include/libmount -isystem /usr/include/blkid -isystem /usr/local/include/libsecret-1 -isystem /usr/local/include/libxml2 -isystem /usr/local/include/avif -isystem /usr/local/include/harfbuzz -isystem /usr/local/include/gtk-3.0 -isystem /usr/local/include/at-spi2-atk/2.0 -isystem /usr/local/include/at-spi-2.0 -isystem /usr/local/include/dbus-1.0 -isystem /usr/local/lib64/dbus-1.0/include -isystem /usr/local/include/pango-1.0 -isystem /usr/local/include/fribidi -isystem /usr/local/include/atk-1.0 -isystem /usr/local/include/cairo -isystem /usr/local/include/libpng16 -isystem /usr/local/include/pixman-1 -isystem /usr/local/include/gdk-pixbuf-2.0 -isystem /usr/include/freetype2 -isystem /usr/local/include/libmanette -Wextra -Wall -pipe -fmax-errors=20 -Wno-odr -Wno-stringop-overread -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-uninitialized -Wno-mismatched-new-delete -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fasynchronous-unwind-tables -fno-strict-aliasing -fno-exceptions -fno-rtti -fcoroutines -ffunction-sections -fdata-sections -O3 -DNDEBUG -std=c++23 -fPIC -fvisibility=hidden -DHWY_STATIC_DEFINE -DAVIF_DLL -pthread -DHAVE_HB_FEATURES_H -MD -MT Source/WebCore/CMakeFiles/WebCore.dir/platform/graphics/gstreamer/TextCombinerGStreamer.cpp.o -MF CMakeFiles/WebCore.dir/platform/graphics/gstreamer/TextCombinerGStreamer.cpp.o.d -o CMakeFiles/WebCore.dir/platform/graphics/gstreamer/TextCombinerGStreamer.cpp.o -c /usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/gstreamer/TextCombinerGStreamer.cpp > In file included from /usr/local/include/gstreamer-1.0/gst/gl/gstgl_fwd.h:26, > from /usr/local/include/gstreamer-1.0/gst/gl/gl.h:24, > from /usr/local/src/webkitgtk-2.46.6/Source/WebCore/platform/graphics/gstreamer/GStreamerVideoFrameConverter.cpp:28, > from /usr/local/src/webkitgtk-2.46.6/0build/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-52.cpp:4: > /usr/local/include/gstreamer-1.0/gst/gl/gstglapi.h:24:10: fatal error: gst/gl/gstglconfig.h: No such file or directory > 24 | #include <gst/gl/gstglconfig.h> > | ^~~~~~~~~~~~~~~~~~~~~~ > compilation terminated. > make[2]: *** [Source/WebCore/CMakeFiles/WebCore.dir/build.make:11733: Source/WebCore/CMakeFiles/WebCore.dir/__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-52.cpp.o] Error 1 > make[2]: *** Waiting for unfinished jobs.... > make[2]: Leaving directory '/usr/local/src/webkitgtk-2.46.6/0build' > make[1]: *** [CMakeFiles/Makefile2:1757: Source/WebCore/CMakeFiles/WebCore.dir/all] Error 2 > make[1]: Leaving directory '/usr/local/src/webkitgtk-2.46.6/0build' > make: *** [Makefile:159: all] Error 2
The attached patch fixes the problem for me.
Attachments
Patch to fix compilation with "-DUSE_GSTREAMER_GL=OFF"
(2.61 KB, patch)
2025-02-14 01:00 PST
,
Thomas Zajic
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-02-14 10:21:25 PST
Can you send a PR targetting the webkitglib/2.46 branch? Please note this build option was removed and will not be included in releases, starting in 2.48.0.
Thomas Zajic
Comment 2
2025-02-15 04:58:48 PST
PR [✅] done, see =>
https://github.com/WebKit/WebKit/pull/40667
. Thanks for the heads-up regarding the pending removal of "USE_GSTREAMER_GL=OFF"! 👍️
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug