Added #if USE(GSTREAMER_GL)/#endif around code that won't compile with "USE_GSTREAMER_GL=OFF" https://bugs.webkit.org/show_bug.cgi?id=287691

Reviewed by NOBODY (OOPS!).

Added #if USE(GSTREAMER_GL)/#endif around code that won't compile with "USE_GSTREAMER_GL=OFF".

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h
* Source/WebCore/platform/graphics/gstreamer/GStreamerVideoFrameConverter.cpp