Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h
@@ -351,7 +351,9 @@ void gstStructureFilterAndMapInPlace(GstStructure*, Function<bool(GstId, GValue*
 WARN_UNUSED_RETURN GRefPtr<GstCaps> buildDMABufCaps();
 #endif
 
+#if USE(GSTREAMER_GL)
 bool setGstElementGLContext(GstElement*, const char* contextType);
+#endif
 
 } // namespace WebCore
 
